@@ -1,9 +1,10 @@
 # $Id$
-# Author: Ivan Vilata i Balaguer <ivan@selidor.net>
+# Authors: Ivan Vilata i Balaguer <ivan@selidor.net>;
+#          Antoni Bella Pérez <antonibella5@yahoo.com>
 # Copyright: This module has been placed in the public domain.
 
-# New language mappings are welcome.  Before doing a new translation, please
-# read <https://docutils.sourceforge.io/docs/howto/i18n.html>.
+# New language mappings are welcome.  Before doing a new translation,
+# please read <https://docutils.sourceforge.io/docs/howto/i18n.html>.
 # Two files must be translated for each language: one in docutils/languages,
 # the other in docutils/parsers/rst/languages.
 
@@ -17,36 +18,34 @@ __docformat__ = 'reStructuredText'
 
 directives = {
       # language-dependent: fixed
-      'atenci\u00F3': 'attention',
+      'atenció': 'attention',
       'compte': 'caution',
-      'code (translation required)': 'code',
       'perill': 'danger',
       'error': 'error',
       'suggeriment': 'hint',
       'important': 'important',
       'nota': 'note',
       'consell': 'tip',
-      'av\u00EDs': 'warning',
+      'avís': 'warning',
       'advertiment': 'admonition',
       'nota-al-marge': 'sidebar',
       'nota-marge': 'sidebar',
       'tema': 'topic',
-      'bloc-de-l\u00EDnies': 'line-block',
-      'bloc-l\u00EDnies': 'line-block',
+      'bloc-de-línies': 'line-block',
+      'bloc-línies': 'line-block',
       'literal-analitzat': 'parsed-literal',
-      'r\u00FAbrica': 'rubric',
-      'ep\u00EDgraf': 'epigraph',
+      'codi': 'code',
+      'bloc-de-codi': 'code',
+      'matemàtiques': 'math',
+      'rúbrica': 'rubric',
+      'epígraf': 'epigraph',
       'sumari': 'highlights',
       'cita-destacada': 'pull-quote',
       'compost': 'compound',
-      'container (translation required)': 'container',
-      # 'questions': 'questions',
+      'contenidor': 'container',
       'taula': 'table',
       'taula-csv': 'csv-table',
       'taula-llista': 'list-table',
-      # 'qa': 'questions',
-      # 'faq': 'questions',
-      'math (translation required)': 'math',
       'meta': 'meta',
       # 'imagemap': 'imagemap',
       'imatge': 'image',
@@ -54,21 +53,21 @@ directives = {
       'inclou': 'include',
       'incloure': 'include',
       'cru': 'raw',
-      'reempla\u00E7a': 'replace',
-      'reempla\u00E7ar': 'replace',
+      'reemplaça': 'replace',
+      'reemplaçar': 'replace',
       'unicode': 'unicode',
       'data': 'date',
       'classe': 'class',
       'rol': 'role',
-      'default-role (translation required)': 'default-role',
-      'title (translation required)': 'title',
+      'rol-predeterminat': 'default-role',
+      'títol': 'title',
       'contingut': 'contents',
       'numsec': 'sectnum',
-      'numeraci\u00F3-de-seccions': 'sectnum',
-      'numeraci\u00F3-seccions': 'sectnum',
-      'cap\u00E7alera': 'header',
-      'peu-de-p\u00E0gina': 'footer',
-      'peu-p\u00E0gina': 'footer',
+      'numeració-de-seccions': 'sectnum',
+      'numeració-seccions': 'sectnum',
+      'capçalera': 'header',
+      'peu-de-pàgina': 'footer',
+      'peu-pàgina': 'footer',
       # 'footnotes': 'footnotes',
       # 'citations': 'citations',
       'notes-amb-destinacions': 'target-notes',
@@ -80,47 +79,48 @@ mapping."""
 roles = {
     # language-dependent: fixed
     'abreviatura': 'abbreviation',
-    'abreviaci\u00F3': 'abbreviation',
+    'abreviació': 'abbreviation',
     'abrev': 'abbreviation',
     'ab': 'abbreviation',
-    'acr\u00F2nim': 'acronym',
+    'acrònim': 'acronym',
     'ac': 'acronym',
-    'code (translation required)': 'code',
-    '\u00EDndex': 'index',
-    'i': 'index',
-    'sub\u00EDndex': 'subscript',
-    'sub': 'subscript',
-    'super\u00EDndex': 'superscript',
-    'sup': 'superscript',
-    'refer\u00E8ncia-a-t\u00EDtol': 'title-reference',
-    'refer\u00E8ncia-t\u00EDtol': 'title-reference',
-    't\u00EDtol': 'title-reference',
-    't': 'title-reference',
-    'refer\u00E8ncia-a-pep': 'pep-reference',
-    'refer\u00E8ncia-pep': 'pep-reference',
-    'pep': 'pep-reference',
-    'refer\u00E8ncia-a-rfc': 'rfc-reference',
-    'refer\u00E8ncia-rfc': 'rfc-reference',
-    'rfc': 'rfc-reference',
-    '\u00E8mfasi': 'emphasis',
-    'destacat': 'strong',
+    'codi': 'code',
+    'èmfasi': 'emphasis',
     'literal': 'literal',
-    'math (translation required)': 'math',
-    'refer\u00E8ncia-amb-nom': 'named-reference',
-    'refer\u00E8ncia-nom': 'named-reference',
-    'refer\u00E8ncia-an\u00F2nima': 'anonymous-reference',
-    'refer\u00E8ncia-a-nota-al-peu': 'footnote-reference',
-    'refer\u00E8ncia-nota-al-peu': 'footnote-reference',
-    'refer\u00E8ncia-a-cita': 'citation-reference',
-    'refer\u00E8ncia-cita': 'citation-reference',
-    'refer\u00E8ncia-a-substituci\u00F3': 'substitution-reference',
-    'refer\u00E8ncia-substituci\u00F3': 'substitution-reference',
-    'destinaci\u00F3': 'target',
-    'refer\u00E8ncia-a-uri': 'uri-reference',
-    'refer\u00E8ncia-uri': 'uri-reference',
+    'matemàtiques': 'math',
+    'referència-a-pep': 'pep-reference',
+    'referència-pep': 'pep-reference',
+    'pep': 'pep-reference',
+    'referència-a-rfc': 'rfc-reference',
+    'referència-rfc': 'rfc-reference',
+    'rfc': 'rfc-reference',
+    'destacat': 'strong',
+    'subíndex': 'subscript',
+    'sub': 'subscript',
+    'superíndex': 'superscript',
+    'sup': 'superscript',
+    'referència-a-títol': 'title-reference',
+    'referència-títol': 'title-reference',
+    'títol': 'title-reference',
+    't': 'title-reference',
+    'cru': 'raw',
+    # the following roles are not implemented in Docutils
+    'índex': 'index',
+    'i': 'index',
+    'referència-anònima': 'anonymous-reference',
+    'referència-a-cita': 'citation-reference',
+    'referència-cita': 'citation-reference',
+    'referència-a-nota-al-peu': 'footnote-reference',
+    'referència-nota-al-peu': 'footnote-reference',
+    'referència-amb-nom': 'named-reference',
+    'referència-nom': 'named-reference',
+    'referència-a-substitució': 'substitution-reference',
+    'referència-substitució': 'substitution-reference',
+    'referència-a-uri': 'uri-reference',
+    'referència-uri': 'uri-reference',
     'uri': 'uri-reference',
     'url': 'uri-reference',
-    'cru': 'raw',
+    'destinació': 'target',
     }
 """Mapping of Catalan role names to canonical role names for interpreted text.
 """
